SVN r1766 Underbuild 002 (Code Sortet)
Code bereinigt und sortiert.

--- a/Legacy_Source/src/Makefile
+++ b/Legacy_Source/src/Makefile
@@ -1677,8 +1677,8 @@ hardware/*/*.h :
 hardware/*/*/*.h :
 	@:
 
-$(O)/%.rc.o:	$(SD)win32/winres.rc $(SD)win32/wLegacy.ico
-	$(WINDRES) -o $@ $<
+$(O)/%.rc.o:	$(SD)win32/winres.rc $(SD)win32/wLegacy.ico $(SD)doomdef.h
+	$(WINDRES) $(OPTS) -i $< -o $@
 
 # Do not remake makefile
 
